--- a/src/zero2hero/zero2hero_0101.ipynb
+++ b/src/zero2hero/zero2hero_0101.ipynb
@@ -40,13 +40,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
-    "tags": []
+    "tags": [],
+    "vscode": {
+     "languageId": "r"
+    }
    },
    "outputs": [],
    "source": [
-    "setwd(\"X:\\\\gdrive\\\\austral2023v\\\\\")  #Establezco el Working Directory"
+    "setwd(\"C:/Users/ccarl/Documents/labo2023v/src\")  #Establezco el Working Directory"
    ]
   },
   {
@@ -67,11 +70,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
-    "tags": []
+    "tags": [],
+    "vscode": {
+     "languageId": "r"
+    }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[1] \"2023-04-08 15:32:24 -03\""
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "Sys.time()"
    ]
@@ -87,11 +103,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
-    "tags": []
+    "tags": [],
+    "vscode": {
+     "languageId": "r"
+    }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1] 36.33015\n"
+     ]
+    }
+   ],
    "source": [
     "t0  <- Sys.time()\n",
     "dataset <- read.csv(\"./datasets/dataset_pequeno.csv\")\n",
@@ -118,11 +145,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {
-    "tags": []
+    "tags": [],
+    "vscode": {
+     "languageId": "r"
+    }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1] 28.51925\n"
+     ]
+    }
+   ],
    "source": [
     "t0  <- Sys.time()\n",
     "dataset <- read.csv(\"./datasets/dataset_pequeno.csv\")\n",
@@ -153,22 +191,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {
-    "tags": []
+    "tags": [],
+    "vscode": {
+     "languageId": "r"
+    }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Warning message:\n",
+      "\"package 'data.table' was built under R version 4.2.3\"\n"
+     ]
+    }
+   ],
    "source": [
     "library( \"data.table\")   #cargo la libreria  data.table"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {
-    "tags": []
+    "tags": [],
+    "vscode": {
+     "languageId": "r"
+    }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1] 2.429391\n"
+     ]
+    }
+   ],
    "source": [
     "t0  <- Sys.time()\n",
     "dataset <- fread(\"./datasets/dataset_pequeno.csv\")\n",
@@ -193,11 +254,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {
-    "tags": []
+    "tags": [],
+    "vscode": {
+     "languageId": "r"
+    }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1] 0.608551\n"
+     ]
+    }
+   ],
    "source": [
     "t0  <- Sys.time()\n",
     "dataset <- fread(\"./datasets/dataset_pequeno.csv\")\n",
@@ -242,7 +314,7 @@
    "mimetype": "text/x-r-source",
    "name": "R",
    "pygments_lexer": "r",
-   "version": "4.2.3"
+   "version": "4.2.1"
   }
  },
  "nbformat": 4,
