--- a/src/zero2hero/zero2hero_0112.ipynb
+++ b/src/zero2hero/zero2hero_0112.ipynb
@@ -23,11 +23,57 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {
-    "tags": []
+    "tags": [],
+    "vscode": {
+     "languageId": "r"
+    }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<table class=\"dataframe\">\n",
+       "<caption>A matrix: 2 × 6 of type dbl</caption>\n",
+       "<thead>\n",
+       "\t<tr><th></th><th scope=col>used</th><th scope=col>(Mb)</th><th scope=col>gc trigger</th><th scope=col>(Mb)</th><th scope=col>max used</th><th scope=col>(Mb)</th></tr>\n",
+       "</thead>\n",
+       "<tbody>\n",
+       "\t<tr><th scope=row>Ncells</th><td>2304499</td><td>123.1</td><td>4560011</td><td>243.6</td><td>3564391</td><td>190.4</td></tr>\n",
+       "\t<tr><th scope=row>Vcells</th><td>3783036</td><td> 28.9</td><td>8388608</td><td> 64.0</td><td>7017984</td><td> 53.6</td></tr>\n",
+       "</tbody>\n",
+       "</table>\n"
+      ],
+      "text/latex": [
+       "A matrix: 2 × 6 of type dbl\n",
+       "\\begin{tabular}{r|llllll}\n",
+       "  & used & (Mb) & gc trigger & (Mb) & max used & (Mb)\\\\\n",
+       "\\hline\n",
+       "\tNcells & 2304499 & 123.1 & 4560011 & 243.6 & 3564391 & 190.4\\\\\n",
+       "\tVcells & 3783036 &  28.9 & 8388608 &  64.0 & 7017984 &  53.6\\\\\n",
+       "\\end{tabular}\n"
+      ],
+      "text/markdown": [
+       "\n",
+       "A matrix: 2 × 6 of type dbl\n",
+       "\n",
+       "| <!--/--> | used | (Mb) | gc trigger | (Mb) | max used | (Mb) |\n",
+       "|---|---|---|---|---|---|---|\n",
+       "| Ncells | 2304499 | 123.1 | 4560011 | 243.6 | 3564391 | 190.4 |\n",
+       "| Vcells | 3783036 |  28.9 | 8388608 |  64.0 | 7017984 |  53.6 |\n",
+       "\n"
+      ],
+      "text/plain": [
+       "       used    (Mb)  gc trigger (Mb)  max used (Mb) \n",
+       "Ncells 2304499 123.1 4560011    243.6 3564391  190.4\n",
+       "Vcells 3783036  28.9 8388608     64.0 7017984   53.6"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "rm( list=ls())\n",
     "gc()\n",
@@ -38,14 +84,17 @@
     "library(\"caret\")\n",
     "\n",
     "options(repr.plot.width=20, repr.plot.height=10) \n",
-    "setwd(\"X:\\\\gdrive\\\\austral2023v\\\\\") #Aqui se debe poner la ruta de la PC local"
+    "setwd(\"C:/Users/ccarl/Documents/labo2023v/src\") #Aqui se debe poner la ruta de la PC local"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {
-    "tags": []
+    "tags": [],
+    "vscode": {
+     "languageId": "r"
+    }
    },
    "outputs": [],
    "source": [
@@ -87,9 +136,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {
-    "tags": []
+    "tags": [],
+    "vscode": {
+     "languageId": "r"
+    }
    },
    "outputs": [],
    "source": [
@@ -99,9 +151,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {
-    "tags": []
+    "tags": [],
+    "vscode": {
+     "languageId": "r"
+    }
    },
    "outputs": [],
    "source": [
@@ -117,7 +172,10 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "tags": []
+    "tags": [],
+    "vscode": {
+     "languageId": "r"
+    }
    },
    "outputs": [],
    "source": [
@@ -126,55 +184,165 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {
-    "tags": []
+    "tags": [],
+    "vscode": {
+     "languageId": "r"
+    }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "15618000"
+      ],
+      "text/latex": [
+       "15618000"
+      ],
+      "text/markdown": [
+       "15618000"
+      ],
+      "text/plain": [
+       "[1] 15618000"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "GananciaArbol(  11, dataset, x=param)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {
-    "tags": []
+    "tags": [],
+    "vscode": {
+     "languageId": "r"
+    }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "16191000"
+      ],
+      "text/latex": [
+       "16191000"
+      ],
+      "text/markdown": [
+       "16191000"
+      ],
+      "text/plain": [
+       "[1] 16191000"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "GananciaArbol(  13, dataset, x=param)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {
-    "tags": []
+    "tags": [],
+    "vscode": {
+     "languageId": "r"
+    }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "14937000"
+      ],
+      "text/latex": [
+       "14937000"
+      ],
+      "text/markdown": [
+       "14937000"
+      ],
+      "text/plain": [
+       "[1] 14937000"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "GananciaArbol(  17, dataset, x=param)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {
-    "tags": []
+    "tags": [],
+    "vscode": {
+     "languageId": "r"
+    }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "14670000"
+      ],
+      "text/latex": [
+       "14670000"
+      ],
+      "text/markdown": [
+       "14670000"
+      ],
+      "text/plain": [
+       "[1] 14670000"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "GananciaArbol(  19, dataset, x=param)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {
-    "tags": []
+    "tags": [],
+    "vscode": {
+     "languageId": "r"
+    }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "14688000"
+      ],
+      "text/latex": [
+       "14688000"
+      ],
+      "text/markdown": [
+       "14688000"
+      ],
+      "text/plain": [
+       "[1] 14688000"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "GananciaArbol(  23, dataset, x=param)"
    ]
@@ -210,7 +378,7 @@
    "mimetype": "text/x-r-source",
    "name": "R",
    "pygments_lexer": "r",
-   "version": "4.2.3"
+   "version": "4.2.1"
   }
  },
  "nbformat": 4,
