--- a/src/zero2hero/zero2hero_0114.ipynb
+++ b/src/zero2hero/zero2hero_0114.ipynb
@@ -24,9 +24,78 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 1,
+   "metadata": {
+    "vscode": {
+     "languageId": "r"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<table class=\"dataframe\">\n",
+       "<caption>A matrix: 2 × 6 of type dbl</caption>\n",
+       "<thead>\n",
+       "\t<tr><th></th><th scope=col>used</th><th scope=col>(Mb)</th><th scope=col>gc trigger</th><th scope=col>(Mb)</th><th scope=col>max used</th><th scope=col>(Mb)</th></tr>\n",
+       "</thead>\n",
+       "<tbody>\n",
+       "\t<tr><th scope=row>Ncells</th><td> 614718</td><td>32.9</td><td>1321371</td><td>70.6</td><td>1321371</td><td>70.6</td></tr>\n",
+       "\t<tr><th scope=row>Vcells</th><td>1093655</td><td> 8.4</td><td>8388608</td><td>64.0</td><td>1632151</td><td>12.5</td></tr>\n",
+       "</tbody>\n",
+       "</table>\n"
+      ],
+      "text/latex": [
+       "A matrix: 2 × 6 of type dbl\n",
+       "\\begin{tabular}{r|llllll}\n",
+       "  & used & (Mb) & gc trigger & (Mb) & max used & (Mb)\\\\\n",
+       "\\hline\n",
+       "\tNcells &  614718 & 32.9 & 1321371 & 70.6 & 1321371 & 70.6\\\\\n",
+       "\tVcells & 1093655 &  8.4 & 8388608 & 64.0 & 1632151 & 12.5\\\\\n",
+       "\\end{tabular}\n"
+      ],
+      "text/markdown": [
+       "\n",
+       "A matrix: 2 × 6 of type dbl\n",
+       "\n",
+       "| <!--/--> | used | (Mb) | gc trigger | (Mb) | max used | (Mb) |\n",
+       "|---|---|---|---|---|---|---|\n",
+       "| Ncells |  614718 | 32.9 | 1321371 | 70.6 | 1321371 | 70.6 |\n",
+       "| Vcells | 1093655 |  8.4 | 8388608 | 64.0 | 1632151 | 12.5 |\n",
+       "\n"
+      ],
+      "text/plain": [
+       "       used    (Mb) gc trigger (Mb) max used (Mb)\n",
+       "Ncells  614718 32.9 1321371    70.6 1321371  70.6\n",
+       "Vcells 1093655  8.4 8388608    64.0 1632151  12.5"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Warning message:\n",
+      "\"package 'data.table' was built under R version 4.2.3\"\n",
+      "Warning message:\n",
+      "\"package 'rpart' was built under R version 4.2.3\"\n",
+      "Warning message:\n",
+      "\"package 'rpart.plot' was built under R version 4.2.3\"\n",
+      "Warning message:\n",
+      "\"package 'caret' was built under R version 4.2.3\"\n",
+      "Loading required package: ggplot2\n",
+      "\n",
+      "Warning message:\n",
+      "\"package 'ggplot2' was built under R version 4.2.3\"\n",
+      "Loading required package: lattice\n",
+      "\n",
+      "Warning message:\n",
+      "\"package 'lattice' was built under R version 4.2.3\"\n"
+     ]
+    }
+   ],
    "source": [
     "rm( list=ls())\n",
     "gc()\n",
@@ -37,7 +106,7 @@
     "library(\"caret\")\n",
     "\n",
     "options(repr.plot.width=20, repr.plot.height=10) \n",
-    "setwd(\"X:\\\\gdrive\\\\austral2023v\\\\\") #Aqui se debe poner la ruta de la PC local"
+    "setwd(\"C:/Users/ccarl/Documents/labo2023v/src\") #Aqui se debe poner la ruta de la PC local"
    ]
   },
   {
@@ -49,8 +118,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "execution_count": 2,
+   "metadata": {
+    "vscode": {
+     "languageId": "r"
+    }
+   },
    "outputs": [],
    "source": [
     "GananciaArbol  <-  function( semilla, data, x, train=0.70) {\n",
@@ -78,8 +151,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "execution_count": 3,
+   "metadata": {
+    "vscode": {
+     "languageId": "r"
+    }
+   },
    "outputs": [],
    "source": [
     "dataset <- fread(\"./datasets/dataset_pequeno.csv\")   #cargo el dataset #cargo el dataset\n",
@@ -88,8 +165,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "execution_count": 4,
+   "metadata": {
+    "vscode": {
+     "languageId": "r"
+    }
+   },
    "outputs": [],
    "source": [
     "#defino unos buenos hiperparametros\n",
@@ -102,7 +183,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "r"
+    }
+   },
    "outputs": [],
    "source": [
     "#defino el vector de semillas"
@@ -110,17 +195,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "execution_count": 6,
+   "metadata": {
+    "vscode": {
+     "languageId": "r"
+    }
+   },
    "outputs": [],
    "source": [
-    "ksemillas  <- c(102191, 200177, 410551, 552581, 892237) #reemplazar por las propias semillas"
+    "ksemillas  <- c(604997, 661201, 693569, 790501, 839071) #reemplazar por las propias semillas"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "execution_count": 8,
+   "metadata": {
+    "vscode": {
+     "languageId": "r"
+    }
+   },
    "outputs": [],
    "source": [
     "vector_ganancias  <- c()  #vector donde voy a ir acumulando las ganancias"
@@ -128,8 +221,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "execution_count": 9,
+   "metadata": {
+    "vscode": {
+     "languageId": "r"
+    }
+   },
    "outputs": [],
    "source": [
     "for( semilla in ksemillas)\n",
@@ -148,9 +245,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 10,
+   "metadata": {
+    "vscode": {
+     "languageId": "r"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<style>\n",
+       ".list-inline {list-style: none; margin:0; padding: 0}\n",
+       ".list-inline>li {display: inline-block}\n",
+       ".list-inline>li:not(:last-child)::after {content: \"\\00b7\"; padding: 0 .5ex}\n",
+       "</style>\n",
+       "<ol class=list-inline><li>54470000</li><li>48530000</li><li>56490000</li><li>55040000</li><li>51140000</li></ol>\n"
+      ],
+      "text/latex": [
+       "\\begin{enumerate*}\n",
+       "\\item 54470000\n",
+       "\\item 48530000\n",
+       "\\item 56490000\n",
+       "\\item 55040000\n",
+       "\\item 51140000\n",
+       "\\end{enumerate*}\n"
+      ],
+      "text/markdown": [
+       "1. 54470000\n",
+       "2. 48530000\n",
+       "3. 56490000\n",
+       "4. 55040000\n",
+       "5. 51140000\n",
+       "\n",
+       "\n"
+      ],
+      "text/plain": [
+       "[1] 54470000 48530000 56490000 55040000 51140000"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "vector_ganancias"
    ]
@@ -164,9 +301,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 11,
+   "metadata": {
+    "vscode": {
+     "languageId": "r"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "53134000"
+      ],
+      "text/latex": [
+       "53134000"
+      ],
+      "text/markdown": [
+       "53134000"
+      ],
+      "text/plain": [
+       "[1] 53134000"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "mean( vector_ganancias )"
    ]
@@ -184,7 +344,7 @@
    "mimetype": "text/x-r-source",
    "name": "R",
    "pygments_lexer": "r",
-   "version": "4.2.3"
+   "version": "4.2.1"
   }
  },
  "nbformat": 4,
