--- a/src/zero2hero/zero2hero_0115.ipynb
+++ b/src/zero2hero/zero2hero_0115.ipynb
@@ -24,11 +24,79 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
-    "tags": []
+    "tags": [],
+    "vscode": {
+     "languageId": "r"
+    }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<table class=\"dataframe\">\n",
+       "<caption>A matrix: 2 × 6 of type dbl</caption>\n",
+       "<thead>\n",
+       "\t<tr><th></th><th scope=col>used</th><th scope=col>(Mb)</th><th scope=col>gc trigger</th><th scope=col>(Mb)</th><th scope=col>max used</th><th scope=col>(Mb)</th></tr>\n",
+       "</thead>\n",
+       "<tbody>\n",
+       "\t<tr><th scope=row>Ncells</th><td> 614719</td><td>32.9</td><td>1321371</td><td>70.6</td><td>1321371</td><td>70.6</td></tr>\n",
+       "\t<tr><th scope=row>Vcells</th><td>1093658</td><td> 8.4</td><td>8388608</td><td>64.0</td><td>1632151</td><td>12.5</td></tr>\n",
+       "</tbody>\n",
+       "</table>\n"
+      ],
+      "text/latex": [
+       "A matrix: 2 × 6 of type dbl\n",
+       "\\begin{tabular}{r|llllll}\n",
+       "  & used & (Mb) & gc trigger & (Mb) & max used & (Mb)\\\\\n",
+       "\\hline\n",
+       "\tNcells &  614719 & 32.9 & 1321371 & 70.6 & 1321371 & 70.6\\\\\n",
+       "\tVcells & 1093658 &  8.4 & 8388608 & 64.0 & 1632151 & 12.5\\\\\n",
+       "\\end{tabular}\n"
+      ],
+      "text/markdown": [
+       "\n",
+       "A matrix: 2 × 6 of type dbl\n",
+       "\n",
+       "| <!--/--> | used | (Mb) | gc trigger | (Mb) | max used | (Mb) |\n",
+       "|---|---|---|---|---|---|---|\n",
+       "| Ncells |  614719 | 32.9 | 1321371 | 70.6 | 1321371 | 70.6 |\n",
+       "| Vcells | 1093658 |  8.4 | 8388608 | 64.0 | 1632151 | 12.5 |\n",
+       "\n"
+      ],
+      "text/plain": [
+       "       used    (Mb) gc trigger (Mb) max used (Mb)\n",
+       "Ncells  614719 32.9 1321371    70.6 1321371  70.6\n",
+       "Vcells 1093658  8.4 8388608    64.0 1632151  12.5"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Warning message:\n",
+      "\"package 'data.table' was built under R version 4.2.3\"\n",
+      "Warning message:\n",
+      "\"package 'rpart' was built under R version 4.2.3\"\n",
+      "Warning message:\n",
+      "\"package 'rpart.plot' was built under R version 4.2.3\"\n",
+      "Warning message:\n",
+      "\"package 'caret' was built under R version 4.2.3\"\n",
+      "Loading required package: ggplot2\n",
+      "\n",
+      "Warning message:\n",
+      "\"package 'ggplot2' was built under R version 4.2.3\"\n",
+      "Loading required package: lattice\n",
+      "\n",
+      "Warning message:\n",
+      "\"package 'lattice' was built under R version 4.2.3\"\n"
+     ]
+    }
+   ],
    "source": [
     "rm( list=ls())\n",
     "gc()\n",
@@ -39,7 +107,7 @@
     "library(\"caret\")\n",
     "\n",
     "options(repr.plot.width=20, repr.plot.height=10) \n",
-    "setwd(\"X:\\\\gdrive\\\\austral2023v\\\\\") #Aqui se debe poner la ruta de la PC local"
+    "setwd(\"C:/Users/ccarl/Documents/labo2023v/src\") #Aqui se debe poner la ruta de la PC local"
    ]
   },
   {
@@ -51,9 +119,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
-    "tags": []
+    "tags": [],
+    "vscode": {
+     "languageId": "r"
+    }
    },
    "outputs": [],
    "source": [
@@ -83,9 +154,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
-    "tags": []
+    "tags": [],
+    "vscode": {
+     "languageId": "r"
+    }
    },
    "outputs": [],
    "source": [
@@ -104,9 +178,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {
-    "tags": []
+    "tags": [],
+    "vscode": {
+     "languageId": "r"
+    }
    },
    "outputs": [],
    "source": [
@@ -116,20 +193,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {
-    "tags": []
+    "tags": [],
+    "vscode": {
+     "languageId": "r"
+    }
    },
    "outputs": [],
    "source": [
-    "ksemillas  <- c(102191, 200177, 410551, 552581, 892237) #reemplazar por las propias semillas"
+    "ksemillas  <- c(604997, 661201, 693569, 790501, 839071) #reemplazar por las propias semillas"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {
-    "tags": []
+    "tags": [],
+    "vscode": {
+     "languageId": "r"
+    }
    },
    "outputs": [],
    "source": [
@@ -149,9 +232,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {
-    "tags": []
+    "tags": [],
+    "vscode": {
+     "languageId": "r"
+    }
    },
    "outputs": [],
    "source": [
@@ -160,9 +246,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {
-    "tags": []
+    "tags": [],
+    "vscode": {
+     "languageId": "r"
+    }
    },
    "outputs": [],
    "source": [
@@ -175,9 +264,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {
-    "tags": []
+    "tags": [],
+    "vscode": {
+     "languageId": "r"
+    }
    },
    "outputs": [],
    "source": [
@@ -186,11 +278,51 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {
-    "tags": []
+    "tags": [],
+    "vscode": {
+     "languageId": "r"
+    }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "53134000"
+      ],
+      "text/latex": [
+       "53134000"
+      ],
+      "text/markdown": [
+       "53134000"
+      ],
+      "text/plain": [
+       "[1] 53134000"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "53082000"
+      ],
+      "text/latex": [
+       "53082000"
+      ],
+      "text/markdown": [
+       "53082000"
+      ],
+      "text/plain": [
+       "[1] 53082000"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "ganancia_montecarlo1\n",
     "ganancia_montecarlo2"
@@ -220,7 +352,7 @@
    "mimetype": "text/x-r-source",
    "name": "R",
    "pygments_lexer": "r",
-   "version": "4.2.3"
+   "version": "4.2.1"
   }
  },
  "nbformat": 4,
